--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -41,8 +41,8 @@
         <i class="fas fa-shopping-cart cart-icon"></i>
         <span id="cartCount" class="count">0</span>
       </a>
-      <a href="#" id="profileTrigger" aria-label="User Profile">
-        <i class="fas fa-user-circle user-icon"></i>
+      <a href="profile.html" id="profileTrigger" aria-label="User Profile">
+        <i class="fas fa-user user-icon"></i>
       </a>
     </div>
   </header>
@@ -359,21 +359,6 @@
             <i class="fas fa-arrow-right"></i>
           </button>
 
-          <div class="auth-divider">
-            <span>or continue with</span>
-          </div>
-
-          <div class="social-buttons">
-            <button type="button" class="social-btn google">
-              <i class="fab fa-google"></i>
-              Google
-            </button>
-            <button type="button" class="social-btn facebook">
-              <i class="fab fa-facebook-f"></i>
-              Facebook
-            </button>
-          </div>
-
           <p class="auth-switch">
             Don't have an account?
             <button type="button" class="switch-btn" id="showSignup">Create Account</button>
@@ -455,21 +440,6 @@
             <span>Create Account</span>
             <i class="fas fa-user-plus"></i>
           </button>
-
-          <div class="auth-divider">
-            <span>or continue with</span>
-          </div>
-
-          <div class="social-buttons">
-            <button type="button" class="social-btn google">
-              <i class="fab fa-google"></i>
-              Google
-            </button>
-            <button type="button" class="social-btn facebook">
-              <i class="fab fa-facebook-f"></i>
-              Facebook
-            </button>
-          </div>
 
           <p class="auth-switch">
             Already have an account?
