--- a/client/templates/products.html
+++ b/client/templates/products.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Products</title>
   <link rel="stylesheet" href="../static/css/product.css">
+  <link rel="stylesheet" href="../static/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
@@ -31,9 +32,13 @@
     </nav>
 
     <div class="icons">
-      <a href="cart.html"><i class="fas fa-shopping-cart cart-icon"></i></a>
-      <button class="avatar-btn" id="profileBtn" aria-label="Profile"> <span class="avatar"
-        id="profileAvatar" aria-hidden="true"></span> </button>
+      <a href="../templates/cart.html" aria-label="Shopping Cart">
+        <i class="fas fa-shopping-cart cart-icon"></i>
+        <span id="cartCount" class="count">0</span>
+      </a>
+      <a href="profile.html" id="profileTrigger" aria-label="User Profile">
+        <i class="fas fa-user user-icon"></i>
+      </a>
     </div>
   </header>
 
@@ -185,6 +190,7 @@
 
   <script type="module" src="../static/js/products.js" defer></script>
   <script src="../static/js/header.js"></script>
+  <script src="../static/js/profile.js"></script>
 </body>
 
 </html>
