--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -38,6 +38,7 @@
 
   /* Transitions */
   --transition-fast: 0.2s ease;
+  --transition: 0.2s cubic-bezier(0.4, 0, 0.2, 1);
   --transition-normal: 0.3s ease;
   --transition-slow: 0.5s ease;
 }
