--- a/client/templates/products.html
+++ b/client/templates/products.html
@@ -17,10 +17,10 @@
 
 <body>
   <header class="navbar">
-    <div class="logo-container">
+    <a class="logo-container" href="index.html">
       <img src="../assets/img/bari.jpg" alt="Bari Foods Logo" class="logo">
       <h1>BARI FOODS</h1>
-    </div>
+    </a>
 
     <nav>
       <ul class="nav-links">
