--- a/client/templates/checkout.html
+++ b/client/templates/checkout.html
@@ -11,7 +11,7 @@
 
 <body> <!-- Header: logo left, avatar right -->
   <header class="navbar navbar--brand">
-    <div class="logo-container"> <a href="/" class="brand-link" aria-label="Home"> <img class="logo"
+    <div class="logo-container"> <a href="index.html" class="brand-link" aria-label="Home"> <img class="logo"
           src="../assets/img/bari.jpg" alt="BariFoods" /> </a>
       <h1>BARI FOODS</h1>
     </div>
