--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -313,7 +313,7 @@
               </div>
               <div class="order-content">
                 <div class="product-preview">
-                  <img src="https://via.placeholder.com/60x60/e9b540/ffffff?text=PH" alt="Product"
+                  <img src="../assets/products-img/p1.png" alt="Product"
                     class="product-image">
                   <div class="product-details">
                     <h4>Premium Leather Handbag</h4>
@@ -356,7 +356,7 @@
               </div>
               <div class="order-content">
                 <div class="product-preview">
-                  <img src="https://via.placeholder.com/60x60/e9b540/ffffff?text=SP" alt="Product"
+                  <img src="../assets/products-img/p3.png" alt="Product"
                     class="product-image">
                   <div class="product-details">
                     <h4>Gourmet Spice Mix Set</h4>
