--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -87,16 +87,13 @@
       <div class="hero-image">
         <img src="../assets/img/hero-img.png" alt="Bari Foods Model" loading="eager">
         <!-- 
-
         <div class="wave-decoration">
           <img src="../assets/img/hero-bottom.png" alt="Wave Design" loading="lazy">
         </div>
         <div class="camel-icon">
           <img src="../assets/img/camel.png" alt="Camel Icon" loading="lazy">
         </div>
-
         -->
-
       </div>
 
     </section>
@@ -155,7 +152,7 @@
           font-size: 14px;
           font-style: italic;
         ">
-          Over 50+ authentic Rajasthani snacks await you
+          Our authentic Rajasthani snacks await you
         </p>
       </div>
     </section>
