--- a/client/templates/cart.html
+++ b/client/templates/cart.html
@@ -12,11 +12,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
-<body> <!-- Header: logo left, avatar right -->
+<body> 
   <header class="navbar navbar--brand">
-    <div class="logo-container"> <a href="index.html" class="brand-link" aria-label="Home"> <img class="logo"
-          src="../assets/img/bari.jpg" alt="BariFoods" /> </a>
-      <h1>BARI FOODS</h1>
+    <div class="logo-container"> 
+      <a href="index.html" class="brand-link" aria-label="Home"> 
+        <img class="logo" src="../assets/img/bari.jpg" alt="BariFoods" /> 
+        <h1>BARI FOODS</h1>
+      </a>
     </div>
     <div class="spacer"></div> <button class="avatar-btn" id="profileBtn" aria-label="Profile"> <span class="avatar"
         id="profileAvatar" aria-hidden="true"></span> </button>
